--- a/package.json
+++ b/package.json
@@ -4,13 +4,25 @@
   "description": "Example of gating a Livepeer stream behind an NFT",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "run-p start:server start:client",
+    "start:server": "parcel serve --port=3000 index.html",
+    "start:client": "PORT=3001 nodemon livepeer-nft-gate-example.ts"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/express": "^4.17.13",
+    "body-parser": "^1.19.0",
     "ethers": "^5.5.1",
+    "express": "^4.17.1",
+    "http-server": "^14.0.0",
+    "nodemon": "^2.0.15",
+    "npm-run-all": "^4.1.5",
+    "parcel": "^2.0.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "ts-node": "^10.4.0",
+    "ts-node-dev": "^1.1.8",
     "typescript": "^4.4.4",
     "web3": "^1.6.0"
   }
