--- a/package.json
+++ b/package.json
@@ -11,11 +11,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/cookie-parser": "^1.4.2",
     "@types/express": "^4.17.13",
+    "@types/morgan": "^1.9.3",
     "body-parser": "^1.19.0",
+    "cookie-parser": "^1.4.5",
     "ethers": "^5.5.1",
     "express": "^4.17.1",
     "http-server": "^14.0.0",
+    "morgan": "^1.10.0",
     "nodemon": "^2.0.15",
     "npm-run-all": "^4.1.5",
     "parcel": "^2.0.1",
