--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "ethers": "^5.6.5",
     "express": "^4.17.1",
     "http-server": "^14.0.0",
+    "isomorphic-fetch": "^3.0.0",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.15",
     "npm-run-all": "^4.1.5",
@@ -44,6 +45,7 @@
     "assert": "^2.0.0",
     "events": "^3.3.0",
     "https-browserify": "^1.0.0",
+    "miniflare": "^2.6.0",
     "os-browserify": "^0.3.0",
     "querystring-es3": "^0.2.1",
     "stream-browserify": "^3.0.0",
